--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
                     <h1 class="display-5 text-capitalize text-primary mb-3">Contact Us</h1>
-                    <p class="mb-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.<a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <p class="mb-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 </div>
                 <div class="row g-5">
                     <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
